<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MajorityWin</string>
    <string name="action_settings">Settings</string>
    <string name="Text_Join_Room">Join Room</string>
    <string name="Text_Create_Room">Create Room</string>
    <string name="Text_Exit">Exit</string>
    <string name="title_activity_create_room">CreateRoomActivity</string>
    <string name="Text_Enter">Enter</string>
    <string name="Text_Room_Number">Room Number:</string>
    <string name="Text_Main">Main</string>
    <string name="title_activity_enter_room">EnterRoomActivity</string>
    <string name="Text_Participant_Number">Participants:</string>
    <string name="Text_Begin_Vote">Begin Vote</string>
    <string name="Text_Wait">Waiting...</string>
    <string name="title_activity_join_room">JoinRoomActivity</string>
    <string name="Text_Input_Room">Input the room number:</string>
    <string name="Text_Scan">Scan QR Code</string>
    <string name="Text_Invite_Friends">Invite friends with QR Code</string>
    <string name="title_activity_wait_submit">WaitSubmit</string>
    <string name="Text_Back">Back</string>
    <string name="title_activity_submit_question">SubmitQuestion</string>
    <string name="Text_Edit_Topic">Edit Topic</string>
    <string name="Text_Edit_Options">Edit Options</string>
    <string name="Text_Submit">Submit</string>
    <string name="title_activity_start_vote">StartVote</string>
    <string name="Text_Finished">Finished: 0</string>
    <string name="Text_Majority_Agreed">Majority Agreed: 0</string>
    <string name="title_activity_vote_result">VoteResult</string>
    <string name="Text_Next_Round">Next Round</string>
    <string name="Text_Giveup">Give up</string>
    <string name="Text_TimeOut">Timer</string>
    <string name="action_register">Register</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="title_activity_launcher">LauncherActivity</string>

</resources>
