<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <Button
        android:id="@+id/Button_Cancle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:text="@string/Text_Main" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="15dp"
            android:text="@string/Text_Room_Number" />

        <EditText
            android:id="@+id/EditView_RoomNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:layout_marginTop="10dp"
            android:textSize="15sp"
            android:hint="@string/Text_Input_Room" />

    </LinearLayout>

    <Button
        android:id="@+id/Button_Enter_Room"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:text="@string/Text_Enter" />
    
     <Button
        android:id="@+id/Button_Scan_QRCode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/Text_Scan" />

</LinearLayout>