<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
     android:background="@drawable/background2"   >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/Button_Cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="15dp"
            android:text="@string/Text_Back" />

        <TextView
            android:id="@+id/TextView_ParticipantNumber"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_gravity="top"
            android:layout_marginLeft="100dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="15dp"
            android:textSize="15sp"
        android:textColor="@android:color/black"
            android:text="@string/Text_Participant_Number" />

    </LinearLayout>

    <Button
        android:id="@+id/Button_Begin_Vote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="70dp"
        android:text="@string/Text_Begin_Vote" />

    <EditText
        android:id="@+id/EditText_Participants"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:gravity="center_horizontal"
        android:inputType="textMultiLine"
        android:text="@string/Text_Wait"
        android:textColor="@android:color/black"
        android:textSize="20sp" >

    </EditText>

</LinearLayout>