<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
     android:background="@drawable/background2"  >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/TextView_TimeOut"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="120dp"
            android:layout_marginTop="10dp"
            android:text="@string/Text_TimeOut"
            android:textSize="20sp"
        android:textColor="@android:color/black" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="30dp"
        android:text="@string/Text_Edit_Topic"
        android:textSize="20sp" 
        android:textColor="@android:color/black"/>

    <EditText
        android:id="@+id/Edit_Topic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textMultiLine" 
        android:textSize="15sp"
        android:textColor="@android:color/black">
    </EditText>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="30dp"
        android:text="@string/Text_Edit_Options"
        android:textSize="20sp" 
        android:textColor="@android:color/black"/>

    <LinearLayout
        android:id="@+id/parentView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <Button
            android:id="@+id/btnAddNewItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="8dp"
            android:minHeight="10dp"
            android:minWidth="10dp"
            android:text="+"
            android:textSize="14sp" />
        
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/Button_Submit_Question"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="30dp"
            
            android:text="@string/Text_Submit" />

        <Button
            android:id="@+id/Button_Give_Up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="80dp"
            android:layout_marginTop="30dp"
            android:text="@string/Text_Giveup" />
    </LinearLayout>

</LinearLayout>