<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/Button_Cancle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="15dp"
            android:text="@string/Text_Back" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="right"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/Text_Topic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginRight="10dp"
                android:layout_marginTop="3dp"
                android:text="@string/Text_Finished"
                android:textSize="15sp" />
            
            <TextView
                android:id="@+id/Text_Topic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/Text_Majority_Agreed"
                android:textSize="15sp" />

        </LinearLayout>

    </LinearLayout>
   
	<TextView
	    android:id="@+id/Text_Topic"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_gravity="center"
	    android:layout_marginTop="30dp"
	    android:text="@string/Text_Back"
	    android:textSize="20sp" />

	<RadioButton
	    android:id="@+id/radioButton1"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_gravity="center"
	    android:layout_marginTop="30dp"
	    android:text="RadioButton" />

	<RadioButton
	    android:id="@+id/radioButton2"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_gravity="center"
	    android:layout_marginTop="15dp"
	    android:text="RadioButton" />

	<RadioButton
	    android:id="@+id/radioButton3"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_gravity="center"
	    android:layout_marginTop="15dp"
	    android:text="RadioButton" />
	
</LinearLayout>